# perun

./: .gitignore  Cargo.toml  Makefile  README.md  cond_test.pr  example.pr  fibbonacci.pr  file.txt  hello.pr  snake  snake.pr
examples/: Makefile  corelib.pr  example.pr  fibbonacci.pr  hello.pr  linked_list.pr  snake.pr
src/: address_table.rs  ast.rs  error.rs  ilgen.rs  lexer.rs  main.rs  parser.rs  symbols.rs  token.rs  token_reader.rs  typing.rs
