[package]
name = "perun"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
llvm-sys-180 = { package = "llvm-sys", version = "180.0.0", features = ["prefer-static"] }
either = { version = "1.13.0" }
clap = { version = "4.5.16", features = ["derive"] }